[Score] 1차 기능 구현 완료 (#70)
* Get ScoreBoard 기능 구현

* Score 기능 구현

* Score 기능 구현

* 동기화

* Score-Requirement1- Refactoring

* Score-Requirement1-Refactoring