@@ -1,11 +1,15 @@
-package seoultech.se.backend.Score;
+package seoultech.se.backend.score;
 
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import lombok.RequiredArgsConstructor;
+
+/*
+ * 작성자: 문주성
+ * 공부할 것: strema, map, ::new, toList
+ */
 
 @Service
 @RequiredArgsConstructor
@@ -13,17 +17,15 @@ public class ScoreService {
 
     private final ScoreRepository scoreRepository;
 
-    public ScoreResponseDto saveNewScore(ScoreRequestDto userScore) {
-        ScoreEntity newData = ScoreEntity.from(userScore);
+    public ScoreResponseDto saveScore(ScoreRequestDto userScore) {
+        ScoreEntity newData = userScore.toEntity();
         ScoreEntity savedData = scoreRepository.save(newData);
         return new ScoreResponseDto(savedData);
     }
 
     public List<ScoreResponseDto> getScoreBoard() {
         List<ScoreEntity> scoreList = scoreRepository.findAll();
-        return scoreList.stream()
-                .map(ScoreResponseDto::new)
-                .collect(Collectors.toList());
+        return scoreList.stream().map(ScoreResponseDto::new).toList();
     }
 
     public void deleteScoreBoard() {
